@@ -38,6 +38,7 @@ Application Changes:
 - Replaced selectweapon bonus on weapon foci with weaponspecificdice, as above.
 - Allowed alphabetic sorting of Favorite and Recent roster lists. Note that this sorting is based on the TAG of the node, which is the full filename path.
 - Added basic support for the Gunnery specialisation adding to dicepool for vehicle-mounted weapons. This is done by applying a 'gunneryspec' attribute to either the root category node, or the category node of the weapon itself. The weapon is checked first, then the category.
+- Added support for the Reach improvement to apply to specifically named weapons only. This is used by adding a Name attribute to the node. 
 
 Application Fixes:
 - Fixed an issue with the Point Buy form incorrectly setting metavariant metatypes to be themselves (ie Dryad (Dryad)).
@@ -61,6 +62,7 @@ Data Changes:
 - Replaced existing firstlevel bonus for the Infirm quality with new attributemaxclamp improvements. 
 - Added Foot Anchor weapon to the Foot Anchor cyberware.
 - Added gunneryspec to most categories of weapon; most categories have been mapped as Ballistic for now, with other weapons needing to be mapped manually. Please contact the chummer dev team if you'd like to assist with this, though any pull requests will be welcomed as per normal.
+- Added customdata for the above to support the SRM 1.3 ruling that the cyberweapons from SR5 benefit from Reach when used as a pair.
 
 New Strings:
 - String_DisableSkillGroupPrompt
